feat(HU3): Asignar orden de envio a ruta, validacion carga y filtro estado
