# src/frameworks/web/routes/index.ts
@@ -1,11 +1,13 @@
 import { Application } from 'express';
 import authRoutes from './auth.routes';
 import envioRoutes from './envio.routes';
+import asignarRoutes from './asignar.routes';
 
 export const setupRoutes = (app: Application): void => {
   // API versioning
   app.use('/api/v1/auth', authRoutes);
   app.use('/api/v1/envios', envioRoutes);
+  app.use('/api/v1/asignar', asignarRoutes);
   
   // Ruta base para verificar que el servidor está funcionando
   app.get('/', (req, res) => {
